[gd_scene load_steps=3 format=2]

[ext_resource path="res://hud/tinyfont.fnt" type="BitmapFont" id=1]
[ext_resource path="res://hud/hud_text.gd" type="Script" id=2]

[node name="hud_text" type="Label"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 181.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 2 )
_sections_unfolded = [ "Pause", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="user_input_timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="text_timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[connection signal="timeout" from="user_input_timer" to="." method="_on_user_input_timer_timeout"]

[connection signal="timeout" from="text_timer" to="." method="_on_text_timer_timeout"]


